style : fix user details alignment in post component

--- a/src/Components/Post.module.css
+++ b/src/Components/Post.module.css
@@ -24,11 +24,11 @@
 .user-details {
   text-decoration: none;
   color: #999;
-  display: inline-block;
   margin-bottom: 1rem;
   display: flex;
   gap: 1rem;
-  align-items: center;
+  align-items: flex-start;
+
 }
 
 .full-name {
@@ -86,6 +86,7 @@
 }
 
 .profilePic{
-  max-width: 2rem;
+  max-width: 3rem;
   border-radius: 50%;
 }
+
